--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+*{
+  background: #222;
+}
 .body {
-  background: #6B63D3;
+  background: #222;
   text-align: center;
   height: 100%;
+  color: #fff;
 }
 .options{
     padding: 30px 0;
@@ -11,14 +15,14 @@
     transition: all 0.3s ease;
 }
 .heading{
-color: #3E0F71;
-font-size: 100px;
+color: #03DAC5;
+font-size: 80px;
 border: 10px #ffd8ff;
-
+width: 100%;
 }
-.button{
-  border: 2px solid#080F58;
-    background:#080F58;
+.main-button{
+  border: 2px solid#BB86FC;
+    background:none;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -28,9 +32,10 @@ border: 10px #ffd8ff;
     height: 47px;
     width: 170px;
 }
-.button:hover{
+
+.main-button:hover{
   color: #fff;
-  background: none;
+  background: #03DAC5;
 }
 .App-header {
   background-color: #282c34;
@@ -42,4 +47,22 @@ border: 10px #ffd8ff;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.button{
+  border-radius: 6px;
+  border: 1px solid #03DAC5;
+  color: #ffd8ff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover{
+  color: #222;
+  background: #ffd8ff;
+}
+.image{ 
+  width: 70%;
+}
+.search{
+  border-radius: 6px;
+  border: 2px solid #03DAC5;
+  color: #03DAC5;
+}
